Fixed ldap modify error issue ASTERISK-26580

Change-Id: I18d6101641cd5eb54efa2e113189089e6600d2fc